--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "SDL"]
 	path = SDL
 	url = https://github.com/libsdl-org/SDL
+[submodule "sigfn"]
+	path = sigfn
+	url = https://github.com/johnpatek/sigfn
